# blot

./: .vimrc  README.md  \  get_hash.sh  main.cpp  meson.build
src/: BaseParser.cpp  BaseParser.h  BlotGL.cpp  BlotGL.h  BlotObject.cpp  BlotObject.h  ChangeBackground.cpp  ChangeBackground.h  Delay.cpp  Delay.h  EditGroup.cpp  EditGroup.h  ImageAnimated.cpp  ImageAnimated.h  ImageAppear.cpp  ImageAppear.h  ImageFade.cpp  ImageFade.h  ImageHide.cpp  ImageHide.h  ImageListItem.cpp  ImageListItem.h  ImageMove.cpp  ImageMove.h  ImageProc.cpp  ImageProc.h  ImageWiggle.cpp  ImageWiggle.h  Instruction.cpp  Instruction.h  Library.cpp  Library.h  Parser.cpp  Parser.h  ParserTypes.h  Presentation.cpp  Presentation.h  Properties.cpp  Properties.h  Set.cpp  (+15 more)
src/shaders/: fImage.h  fpImage.h  vImage.h
